<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/newCarPaddingLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/paymentDialogHeading"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/HeadingTextView"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/marginBottom"
            android:text="@string/paymentDialogHeadingText"/>
    <EditText
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registrationDialogHint"
            android:layout_marginBottom="@dimen/marginBottom"
            android:inputType="text"
    />
    <EditText
            android:id="@+id/zonePaymentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numberDialogHint"
            android:layout_marginBottom="@dimen/marginBottom"
    />

    <Button
            android:id="@+id/prepareSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBottom"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_gravity="center"
            android:text="@string/prepareSMSButton"/>
</LinearLayout>